us-liquidity-fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: us-liquidity-frontend
  namespace: us-liquidity
  labels:
    app: us-liquidity-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: us-liquidity-frontend
  template:
    metadata:
      labels:
        app: us-liquidity-frontend
      annotations:
        consul.hashicorp.com/connect-inject: "false"
    spec:
      serviceAccountName: us-liquidity-frontend
      dnsPolicy: ClusterFirst
      containers:
        - name: us-liquidity-frontend
          image: registry.registry.svc.cluster.local:5000/us-liquidity-frontend:7
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
      restartPolicy: Always
