us-liquidity-fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: us-liquidity-frontend
  namespace: us-liquidity
spec:
  selector:
    app: us-liquidity-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
